# toy_code_decoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh  show.py
.circleci/: config.yml
bindings/: bindings.cpp
cmake/: NotQRCodeConfig.cmake  ToyDecoderConfig.cmake
docs/: Doxyfile
examples/: CMakeLists.txt  file.cpp  file_with_params.cpp  img.cpp  img_with_params.cpp  video.cpp  video_with_params.cpp
include/hw/: blob_detector.cpp  blob_detector.hpp  macros.hpp  util.hpp
include/notqrcode/: notqrcode_decoder.hpp  util.hpp
include/toy_decoder/: toy_decoder.hpp  util.hpp
pics/: code180.drawio  code_diff_sizes.drawio  hybrid.drawio  rect_bw.drawio  shapes.drawio
scripts/: circleci.sh  encoder.py  file.py  install.sh  notqrcode.py  video.py
src/: bindings.cpp  blob.cpp  main.cpp  notqrcode_decoder.cpp  shapes.cpp  toy_decoder.cpp  util.cpp  video.cpp
test/: macros.hpp  test.cpp
tests/: CMakeLists.txt  file.cpp  img.cpp  integration_test.cpp  test.cpp  unit_test.cpp  video.cpp
tests/pics/: code.drawio  rect.drawio  rect_bw.drawio  rect_bw_16.drawio  rect_grey.drawio
